# rag_against_the_machine

./: .flake8  .gitignore  Makefile  pyproject.toml
src/: __main__.py  chunking.py  evaluation.py  ingestion.py  models.py  retrieval.py
